tests/baselines/reference/parserClassDeclaration8.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration8.ts (1 errors) ====
    class C {
      constructor();
      ~~~~~~~~~~~~~~
!!! error TS2390: Constructor implementation is missing.
    }